# HyperExchange

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.bak  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-hx  LICENSE  README.md  build.sh  build_app.sh  build_app_docker.sh  build_chain.sh  build_chain_docker.sh  build_crosschain.sh  build_crosschain_docker.sh  build_egenesis.sh  build_egenesis_docker.sh  build_fc.sh  build_fc_docker.sh  build_jsondiff.sh  build_jsondiff_docker.sh  build_leveldb.sh  build_leveldb_docker.sh  build_net.sh  build_net_docker.sh  build_node.sh  build_prepare.sh  build_steps.sh  build_steps_docker.sh  build_uvm.sh  build_uvm_docker.sh  build_wallet.sh  build_wallet_docker.sh  config.ini  docker-compose.yml  genesis.json  python_cli.rar  run_cmake_x64.bat  setenv_x64.bat  (+1 more)
libraries/: CMakeLists.txt  crosschain.rar  uvm-CMakeLists.txt
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  database_api.cpp  impacted.cpp
libraries/app/include/graphene/app/: api.hpp  application.hpp  cross_chain_plugin.hpp  database_api.hpp
libraries/chain/: CMakeLists.txt  Keccak.cpp  account_evaluator.cpp  account_object.cpp  asset_evaluator.cpp  asset_object.cpp  balance_evaluator.cpp  block_database.cpp  buyback.cpp  cashaddr.cpp  coldhot_transfer_evaluate.cpp  coldhot_withdraw.cpp  committee_member_evaluator.cpp  confidential_evaluator.cpp  contract.cpp  contract_entry.cpp  contract_evaluate.cpp  crosschain_record.cpp  crosschain_record_evaluate.cpp  database.cpp  database_impl.cpp  db_balance.cpp  db_block.cpp  db_coldhot_trx.cpp  db_contract_trx.cpp  db_crosschain_trx.cpp  db_debug.cpp  db_eths_trx.cpp  db_getter.cpp  db_init.cpp  db_lock_balance.cpp  db_maint.cpp  db_management.cpp  db_market.cpp  db_notify.cpp  db_pay_back.cpp  db_update.cpp  db_witness_schedule.cpp  eth_seri_record.cpp  eth_seri_record_evaluate.cpp  (+25 more)
libraries/chain/include/: Keccak.hpp
libraries/chain/include/graphene/chain/: account_evaluator.hpp  account_object.hpp  asset_evaluator.hpp  asset_object.hpp  balance_evaluator.hpp  balance_object.hpp  block_database.hpp  budget_record_object.hpp  cashaddr.h  coldhot_transfer_evaluate.hpp  coldhot_transfer_object.hpp  coldhot_withdraw.hpp  committee_member_evaluator.hpp  committee_member_object.hpp  config.hpp  contract.hpp  contract_engine.hpp  contract_engine_builder.hpp  (+44 more)
libraries/chain/protocol/: account.cpp  address.cpp  asset_ops.cpp  chain_parameters.cpp  committee_member.cpp  fee_schedule.cpp  guard_lock_balance.cpp  guard_refund_balance.cpp  lockbalance.cpp  memo.cpp  operations.cpp  proposal.cpp  referendum.cpp  transaction.cpp  transfer.cpp  types.cpp  witness.cpp
libraries/crosschain/: CMakeLists.txt  crosschain.cpp  crosschain_demo_plugin.cpp  crosschain_interface_bch.cpp  crosschain_interface_btc.cpp  crosschain_interface_btm.cpp  crosschain_interface_emu.cpp  crosschain_interface_erc.cpp  crosschain_interface_eth.cpp  crosschain_interface_hc.cpp  crosschain_interface_ltc.cpp  crosschain_interface_ub.cpp  crosschain_interface_usdt.cpp  crosschain_transaction_record_plugin.cpp  git_revision.cpp.in
libraries/crosschain/include/: crosschain.hpp  crosschain_impl.hpp  crosschain_interface_emu.hpp
libraries/crosschain_privatekey_management/: CMakeLists.txt  database_privatekey.cpp  main.cpp  private_key.cpp  util.cpp
libraries/db/: CMakeLists.txt  backup_database.cpp  object_database.cpp  serializable_undo_state.cpp  undo_database.cpp
libraries/ed25519-donna/: CMakeLists.txt  bech32.cpp  bytomlib.cpp  bytomlib.hpp  ed25519-randombytes.h  ed25519.c  ed25519.h  main.cpp  test-ticks.h
libraries/ed25519-donna/SHA3IUF/: sha3.cpp
libraries/ed25519-donna/bech32/: LICENSE.txt  Makefile  Makefile.inc  Makefile.linux  README.md  bech32.1  bech32.1.html  bech32.1.md  bech32.1.txt  bech32.c  segwit_addr.cpp  segwit_addr.h
libraries/egenesis/: CMakeLists.txt  egenesis_brief.cpp.tmpl  egenesis_full.cpp.tmpl  egenesis_none.cpp  embed_genesis.cpp
libraries/fc/: CMakeLists.txt
libraries/fc/include/fc/: filesystem.hpp  fixed_string.hpp  ntp.hpp  platform_independence.hpp  static_variant.hpp  string.hpp  time.hpp  variant.hpp
libraries/fc/src/: exception.cpp  filesystem.cpp  ntp.cpp  time.cpp
libraries/fc/src/crypto/: base58.cpp  dh.cpp  elliptic_common.cpp  elliptic_secp256k1.cpp  sha512.cpp
libraries/fc/src/io/: sstream.cpp
libraries/fc/src/log/: file_appender.cpp  logger_config.cpp
libraries/fc/src/rpc/: bstate.cpp  http_api.cpp  websocket_api.cpp
libraries/fc/src/thread/: context.hpp  non_preemptable_scope_check.cpp  thread_d.hpp
libraries/fc/tests/: CMakeLists.txt  plugin_tests.cpp
libraries/leveldb-msvc/include/: unistd.h
libraries/leveldb-msvc/include/leveldb/: db.h
libraries/leveldb/port/: port_win.h
libraries/net/: CMakeLists.txt  node.cpp
libraries/plugins/: CMakeLists.txt
libraries/plugins/account_history/: account_history_plugin.cpp
libraries/plugins/backup/: CMakeLists.txt  backup_plugin.cpp
libraries/plugins/debug_witness/: debug_api.cpp  debug_witness.cpp
libraries/plugins/delayed_node/: delayed_node_plugin.cpp
libraries/plugins/market_history/: market_history_plugin.cpp
libraries/plugins/network/: CMakeLists.txt  network_heartBeat.cpp
libraries/plugins/transaction/: CMakeLists.txt  transaction_plugin.cpp
libraries/plugins/witness/: witness.cpp
libraries/privatekey_management/: CMakeLists.txt  database_privatekey.cpp  main.cpp  private_key.cpp
libraries/utilities/: CMakeLists.txt  blake256.cpp  ordered_json.cpp  string_escape.cpp  words.cpp
libraries/wallet/: CMakeLists.txt  wallet.cpp
programs/build_helpers/: CMakeLists.txt  member_enumerator.cpp
programs/cli_wallet/: CMakeLists.txt  main.cpp
programs/debug_node/: CMakeLists.txt  main.cpp
programs/genesis_util/: CMakeLists.txt  genesis_update.cpp
programs/js_operation_serializer/: CMakeLists.txt  main.cpp
programs/key_decryptor/: CMakeLists.txt  main.cpp
programs/size_checker/: CMakeLists.txt  main.cpp
programs/witness_node/: CMakeLists.txt  main.cpp
tests/generate_empty_blocks/: CMakeLists.txt  main.cpp
(+141 files in other folders)
