add_subdirectory( fc )
add_subdirectory( db )
add_subdirectory( deterministic_openssl_rand )
add_subdirectory( chain )
add_subdirectory( egenesis )
add_subdirectory( net )
add_subdirectory( utilities )
add_subdirectory( app )
add_subdirectory( uvm )
add_subdirectory( plugins )
add_subdirectory( wallet )
add_subdirectory( crosschain )
add_subdirectory( jsondiff )
add_subdirectory( crosschain_privatekey_management )
